--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       text-align: center;
       padding-top: 100px;
     }
-    a.download, button.generate {
+    a.download, button.generate, button.one-click {
       display: inline-block;
       background: #00cc99;
       padding: 15px 25px;
@@ -23,7 +23,7 @@
       border: none;
       cursor: pointer;
     }
-    a.download:hover, button.generate:hover {
+    a.download:hover, button.generate:hover, button.one-click:hover {
       background: #00e6aa;
     }
     button.generate:disabled {
@@ -35,6 +35,9 @@
       font-size: 1.2rem;
       color: #ccc;
     }
+    #download {
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
@@ -44,14 +47,20 @@
   <button id="generateBtn" class="generate">Generate Latest Playlist</button>
   <div id="status"></div>
 
-  <div id="download" style="display: none; margin-top: 30px;">
+  <div id="download" style="display: none;">
     <a href="/ranked.bplist" class="download">Download ranked.bplist</a>
+  </div>
+
+  <div id="oneClickDownload" style="display: none; margin-top: 20px;">
+    <button id="oneClickBtn" class="one-click">One Click Download</button>
   </div>
 
   <script>
     const generateBtn = document.getElementById("generateBtn");
     const statusDiv = document.getElementById("status");
     const downloadDiv = document.getElementById("download");
+    const oneClickDownloadDiv = document.getElementById("oneClickDownload");
+    const oneClickBtn = document.getElementById("oneClickBtn");
 
     async function checkStatusLoop() {
       const interval = setInterval(async () => {
@@ -64,6 +73,7 @@
           generateBtn.style.display = "none"; // Hide generate button when done
           statusDiv.textContent = "✅ Playlist is ready.";
           downloadDiv.style.display = "block";
+          oneClickDownloadDiv.style.display = "block"; // Show One Click Download button
         } else {
           statusDiv.textContent = "⏳ Still generating... please wait.";
         }
@@ -74,6 +84,7 @@
       generateBtn.disabled = true;
       generateBtn.textContent = "Generating...";
       downloadDiv.style.display = "none";
+      oneClickDownloadDiv.style.display = "none"; // Hide One Click Download initially
       statusDiv.textContent = "🛠️ Generating the full ScoreSaber ranked playlist...";
 
       try {
@@ -88,13 +99,19 @@
       checkStatusLoop();
     };
 
+    // One Click Download action
+    oneClickBtn.onclick = () => {
+      window.location.href = '/ranked.bplist'; // Redirect to download link
+    };
+
     // Auto check if playlist is ready on load
     window.addEventListener("load", async () => {
       const res = await fetch("/status");
       const { generating } = await res.json();
       if (!generating) {
-        generateBtn.style.display = "none";  // Hide on load if playlist ready
+        generateBtn.style.display = "none";  // Hide on load if playlist is ready
         downloadDiv.style.display = "block";
+        oneClickDownloadDiv.style.display = "block"; // Show One Click Download button
       }
     });
   </script>
